--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/aliyunoss/aliyunoss"
   ],
   "window": {
     "backgroundTextStyle": "light",
